2009-10-08

	* src/query_search.c: execute query search in another thread.

2009-10-07

	* src/inc.c: inc_drop_message(): fixed a bug that MIME flag was not
	  properly set on receiving.

2009-10-07

	* libsylph/mh.c: mh_get_mtime(): fixed memory leak.
	  Added global locks to each functions.

2009-10-06

	* src/rpop3.c: added missing GDK locks.

2009-10-05

	* libsylph/utils.c
	  libsylph/pop.c
	  libsylph/socket.c
	  src/logwindow.c: removed some debug prints.
	* libsylph/session.c: uncommented code block for unix.

2009-10-05

	* libsylph/imap.c: imap_session_destroy(): free thread pool.

2009-10-05

	* src/main.c: display status on loading plug-ins.

2009-10-02

	* libsylph/imap.c: execute imap_get_uncached_messages() in another
	  thread.

2009-10-02

	* src/trayicon.c
	  src/syldap.c
	  src/summaryview.c
	  src/folderview.c: added missing locks on idle callbacks.

2009-10-01

	* libsylph/imap.c: reimplemented using GThreadPool.

2009-10-01

	* libsylph/imap.c: refactored.

2009-09-30

	* libsylph/imap.c: execute imap_cmd_fetch() in another thread.

2009-09-30

	* libsylph/utils.[ch]
	  src/logwindow.c: added log_flush() function.
	* libsylph/imap.c: execute imap_cmd_ok() in another thread.

2009-09-30

	* libsylph/socket.[ch]
	  libsylph/session.c: renamed sock_connect_async() to
	  sock_connect_async_thread().
	* libsylph/imap.c: imap_open(): connect in another thread.

2009-09-29

	* libsylph/utils.c: made writing to log file thread-safe.

2009-09-29

	* src/logwindow.[ch]: made LogWindow thread-safe.
	* libsylph/utils.c
	  libsylph/socket.c
	  src/inc.c
	  src/statusbar.c
	  src/send_message.c
	  src/main.c: made gdk_threads_enter() / gdk_threads_leave()
	  reentrant.

2009-09-25

	* libsylph/utils.[ch]
	  libsylph/socket.[ch]
	  libsylph/session.c
	  libsylph/pop.c
	  src/inc.c
	  src/main.c: fixed the handling of GDK thread lock.

2009-09-18

	* libsylph/utils.c: execute_command_line_async_wait(): disable
	  threading if USE_THREADS is not set.
