@@ -1,5 +1,10 @@
 2009-10-08
 
+	* libsylph/imap.c
+	  src/query_search.c: fixed compilation without thread support.
+
+2009-10-08
+
 	* src/query_search.c: execute query search in another thread.
 
 2009-10-07
